--- a/index.html
+++ b/index.html
@@ -198,6 +198,13 @@
 </body>
 
 <script>
+	//Create the vue instance
+	var mainVue = new Vue({
+		el: "#app",
+		router: vr_router
+	});
+
+	//Initialize lots of ajax loading of json data
 	var unsorted_gear = [];
 	var traits = [];
 	var morphs = [];
@@ -214,45 +221,19 @@
     var sleights = [];
     var gear_types = [];
 
-    $.getJSON('data/backgrounds.json').then( (json) => {
-      backgrounds = _.concat(backgrounds,json);
-    });
-    $.getJSON('data/careers.json').then( (json) => {
-      careers = _.concat(careers,json);
-    });
-    $.getJSON('data/interests.json').then( (json) => {
-      interests = _.concat(interests,json);
-    });
-    $.getJSON('data/factions.json').then( (json) => {
-      factions = _.concat(factions,json);
-    });
-    $.getJSON('data/aptitude_templates.json').then( (json) => {
-      aptemps = _.concat(aptemps,json);
-    });
-    $.getJSON('data/reputations.json').then( (json) => {
-      reputations = _.concat(reputations,json);
-    });
-    $.getJSON('data/skills.json').then( (json) => {
-      skills = _.concat(skills,json);
-    });
-	$.getJSON('data/morphs.json').then( (json) => {
-      morphs = _.concat(morphs,json);
-    });
-    $.getJSON('data/traits.json').then( (json) => {
-      traits = _.concat(traits,json);
-    });
-    $.getJSON('data/aptitudes.json').then( (json) => {
-      aptitudes = _.concat(aptitudes,json);
-    });
-    $.getJSON('data/morph_types.json').then( (json) => {
-      morph_types = _.concat(morph_types,json);
-    });
-    $.getJSON('data/sleights.json').then( (json) => {
-      sleights = _.concat(sleights,json);
-    });
-    $.getJSON('data/gear_categories.json').then( (json) => {
-      gear_types = _.concat(gear_types,json);
-    });
+    $.getJSON('data/backgrounds.json').then( json => backgrounds.push(...json) );
+    $.getJSON('data/careers.json').then( json => careers.push(...json) );
+    $.getJSON('data/interests.json').then( json => interests.push(...json) );
+    $.getJSON('data/factions.json').then( json => factions.push(...json) );
+    $.getJSON('data/aptitude_templates.json').then( json => aptemps.push(...json) );
+    $.getJSON('data/reputations.json').then( json => reputations.push(...json) );
+    $.getJSON('data/skills.json').then( json => skills.push(...json) );
+	$.getJSON('data/morphs.json').then( json => morphs.push(...json) );
+    $.getJSON('data/traits.json').then( json => traits.push(...json) );
+    $.getJSON('data/aptitudes.json').then( json => aptitudes.push(...json) );
+    $.getJSON('data/morph_types.json').then( json => morph_types.push(...json) );
+    $.getJSON('data/sleights.json').then( json => sleights.push(...json) );
+    $.getJSON('data/gear_categories.json').then( json => gear_types.push(...json) );
 
     var gear_jsons = [
       "gear_bots.json",
@@ -274,22 +255,18 @@
       "gear_armor.json"
     ];
 
+    //Compile all the promises from gear loading into an array
     let gear_promises = [];
-    gear_jsons.forEach( (file) => {
-      gear_promises.push($.getJSON('data/'+file));
-    });
+    gear_jsons.forEach( file => gear_promises.push($.getJSON('data/'+file)) );
 
     //When done loading gear...
-    Promise.all(gear_promises).then(function(results){
-      results.forEach(function(json){
-        unsorted_gear.push.apply(this.unsorted_gear,json);
-      });
+    Promise.all(gear_promises).then( function(results_array) {
+      results_array.forEach( json => unsorted_gear.push(...json) );
       //Depends on gear, so only do it after.
-      $.getJSON('data/gear_packs_custom.json').then( (json) => {
-    	gearpacks.push.apply(gearpacks,json);
-      });
+      $.getJSON('data/gear_packs_custom.json').then( json => gearpacks.push(...json) );
     });
     
+    //Fuse.js fuzzy search object for gear searching
     var gear_fuse = new Fuse(unsorted_gear,{
     	keys: [
     		{
@@ -315,9 +292,9 @@
     	includeMatches: true
     });
 
+    //Helper functions
 	function global_despace(value){
-		value = value.toString();
-		return value.replace(/[^#A-Za-z0-9]/g, "_");
+		return value.toString().replace(/[^#A-Za-z0-9]/g, "_");
 	}
 
 	function icon_swap(element, from, to) {
@@ -332,6 +309,40 @@
 		return !isNaN(value);
 	}
 
+	//Gets a skill's total given a skill and a character
+	function skillTotal(skill,character){
+		if(!skill instanceof Skill){
+			console.error("Asked to total non-skill: ",skill);
+			return
+		}
+		if(!character instanceof Character){
+			console.error("Asked to total non-character: ",skill);
+			return
+		}
+
+		let aptitude = character[skill.aptitude];
+		let skillName = colon_truncate(skill.name).toLowerCase();
+		if(['fray','perceive'].includes(skillName)) {
+			aptitude *= 2; //That's just how the rules are, yo.
+		}
+
+		return skill.rank + skill.mod + aptitude;
+	}
+
+	//Consume a dice string and produce a roll as the dice string dictates
+	function parse_and_roll(dicestr){
+		let parsed = parse_dice(dicestr);
+		if(!parsed){
+			show_toast("No valid dice notation found.","Something like '3d6+2' please.","warning");
+			return;
+		}
+
+		let roll = roll_dice(0,parsed.dietype,parsed.diecount,parsed.modifier);
+		roll['dicestr'] = parsed.dicestr;
+		return roll;
+	}
+
+	//Consume a dice string and return an object with info about the dice string
 	function parse_dice(dicestr){
 		let reg = /(?:^|[ :\(-])(\d+)d(\d+)([+-]\d+)?/;
 		let parse = reg.exec(dicestr);
@@ -346,18 +357,7 @@
 		}
 	}
 
-	function parse_and_roll(dicestr){
-		let parsed = parse_dice(dicestr);
-		if(!parsed){
-			show_toast("No valid dice notation found.","Something like '3d6+2' please.","warning");
-			return;
-		}
-
-		let roll = roll_dice(0,parsed.dietype,parsed.diecount,parsed.modifier);
-		roll['dicestr'] = parsed.dicestr;
-		return roll;
-	}
-
+	//Roll some dice, and if it's eclipse-phase-style dice, add fancy text
     function roll_dice(target, dietype = 100, diecount = 1, modifier = 0){
       var result = 0;
       var dice = [];
@@ -416,6 +416,7 @@
 
     }
 
+    //Clone an object to another object using a template to determine what to copy
     function export_properties(from,to,template){
     	//For each key in the template
     	Object.keys(template).forEach(function(key,index) {
@@ -445,6 +446,7 @@
         });
     }
 
+    //Clone an object to another object, using a template WITH HINTS ON WHAT TO INSTANTIATE
     function import_properties(from,to,template){
     	//For each key in the template
     	Object.keys(template).forEach(function(key,index) {
@@ -472,15 +474,15 @@
 
     //Mostly a wrapper for a character's add_to()
 	function add_to_character(location,item,message){
-		//What character?
-		if(!character_loaded) {
-			show_toast("Open your character sheet once first!","Just click the tab to load a charcter.","warning");
-			return;
+		if(character_loaded) {
+			character_loaded.add_to(location,item,message);	
+		} else {
+			show_toast("Character must be loaded first.","Taking you there now then adding item.","warning",7000);
+			vr_router.push("/sheet").then( () => character_loaded.add_to(location,item,message) );
 		}
-
-		character_loaded.add_to(location,item,message);
 	}
 
+	//Pop up a message in the corner of the screen
 	function show_toast(title, message, style = "info", displayTime = 5000, compact = false) {
 		$('body').toast({
 			title,
@@ -492,16 +494,12 @@
 		});
 	}
 
+	//Finds by 'name' key, with case insensitivity and 'colon truncate' as we use in several places like the character sheet
 	function find_by_name(array,name){
-		//Clean name
-		name = colon_truncate(name.toLowerCase());
-
-		//Look
-		return array.find((element) => {
-			return name == colon_truncate(element.name.toLowerCase());
-		});
+		return array.find( element => colon_truncate( name.toLowerCase() ) == colon_truncate( element.name.toLowerCase() ) );
 	}
 
+	//Truncates anything after a colon in a string
 	function colon_truncate(string){
 		let colonated = string.indexOf(":");
 		if(colonated > -1){
@@ -509,11 +507,6 @@
 		}
 		return string;
 	}
-
-	var mainVue = new Vue({
-		el: "#app",
-		router: vr_router
-	});
 
 	// https://github.com/gouch/to-title-case/blob/master/to-title-case.js
 	// License: http://www.opensource.org/licenses/mit-license.php
@@ -571,6 +564,7 @@
 	}
 	/////////////////////////////////////////////////////// End License
 
+	//Simulates a download link that is a text file containing the contents of a variable
 	function download(filename, text) {
 	  var element = document.createElement('a');
 	  element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
@@ -584,6 +578,7 @@
 	  document.body.removeChild(element);
 	}
 
+	//Hover on menu dropdowns (for the top bar)
 	$(function() {
     	$(".ui.dropdown").dropdown({on: "hover"});
 	});
