Fix new muse skill button

--- a/static/sheet.html
+++ b/static/sheet.html
@@ -1287,7 +1287,7 @@
 			<table class="ui inverted unstackable sortable table">
 				<thead>
 					<tr>
-						<th>Name <a @click="new_muse_skill()"><i class="plus square outline icon"></i></a></th>
+						<th>Name <a @click.stop="new_muse_skill()"><i class="plus square outline icon"></i></a></th>
 						<th class="center aligned">Rank</th>
 						<th class="center aligned">Aptitude</th>
 						<th class="center aligned">Mod</th>
